# tinysocks

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_ja.md  README_zh.md  SECURITY.md
.github/: dependabot.yml
.github/scripts/: e2e-curl.sh
.github/workflows/: auto-merge.yml  ci.yml  release.yml
assets/: stats.html
src/: auth.rs  cli.rs  config.rs  handler.rs  http.rs  io_timeout.rs  lib.rs  main.rs  protocol.rs  server.rs  stats.rs
src/service/: linux.rs  mod.rs  windows.rs
tests/: auth.rs  config.rs  protocol.rs  server_concurrency.rs  server_ipv6.rs  server_udp.rs
